# hello-wordsmith

./: .gitignore  README.md  pyproject.toml  setup.py
hello_wordsmith/: datastores.py  hello_wordsmith.py  query_pipeline.py  wordsmith.py
hello_wordsmith/public_wordsmith_dataset/: info.txt  us_constitution.html
storage/: docstore.json
